# semit

./: CMakeLists.txt  README.md
nifti/: CMakeLists.txt  NiftiConfig.cmake.in  UseNifti.cmake.in  nifti1.h  nifti1_io.h
testcli0/: CMakeLists.txt  testcli0.cxx  testcli0.xml
testcli1/: CMakeLists.txt  testcli1.cxx  testcli1.xml
testcli2/: CMakeLists.txt  testcli2.cxx  testcli2.xml
testcli3/: CMakeLists.txt  testcli3.cxx  testcli3.xml
